// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input cssContainer API sets input container className 1`] = `
<body>
  <div>
    <div
      class="test-class"
      role="presentation"
    >
      <label
        class="label"
        for="foo"
      >
        the label
      </label>
      <div
        class="control-container"
      >
        <div
          class="wrapper"
        >
          <input
            aria-describedby="fooHint"
            class="input"
            id="foo"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Input has defaults 1`] = `
<body>
  <div>
    <div
      class="container"
      role="presentation"
    >
      <label
        class="label"
        for="foo"
      >
        the label
      </label>
      <div
        class="control-container"
      >
        <div
          class="wrapper"
        >
          <input
            aria-describedby="fooHint"
            class="input"
            id="foo"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Input has defaults 2`] = `
Object {
  "dirty": false,
  "id": "foo",
  "name": undefined,
  "value": "",
}
`;
